Deployment/hcis_yaml/ingress_kibana.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: kibana-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: kibana-kibana
              servicePort: 5601
